--- a/04_pandas_02_dataframe.ipynb
+++ b/04_pandas_02_dataframe.ipynb
@@ -36,7 +36,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/04_pandas_02_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jodae-hyun/2021_PNUAC_AIData/blob/main/04_pandas_02_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,7 +66,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "pm25_max = [22,18,18,30,23,20,16,19,27,18,26,29,30,27,23,17,16]\n",
         "pm25_min = [16,10,11,12,15,12,11,17,13,9,14,19,14,10,8,9,11]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -107,18 +107,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 550
+          "height": 576
         },
         "id": "VVTw0bVSNedW",
-        "outputId": "f09e0ca9-d430-4e94-8828-a8705347b5d9"
+        "outputId": "488dd85f-7951-46ef-d71e-6c6bdd7b0dd5"
       },
       "source": [
         "#데이터 프레임 생성하기\n",
-        " \n",
+        "df = pd.DataFrame()\n",
+        "df['지역'] = area\n",
+        "df['평균'] = pm25_avg\n",
+        "df['최대'] = pm25_max\n",
+        "df['최소'] = pm25_min\n",
         "\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +300,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -307,12 +311,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h4a2b73e33WN",
-        "outputId": "f9a3d762-15e7-43e3-e8e9-e3a03d31da62"
+        "outputId": "241028c8-0987-4bed-98b4-0e3b52db4a74"
       },
       "source": [
         "df['지역']"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +345,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -352,12 +356,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D2XPYMOe36Tl",
-        "outputId": "5cc725d2-3d3b-4db5-e983-378332d5cebb"
+        "outputId": "185ab9cd-7f38-4e81-e10e-ccb70b26a5b1"
       },
       "source": [
         "type(df['지역'])"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +373,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -408,7 +412,7 @@
       },
       "source": [
         "#지역별주간별_초미세먼지.csv 자료 가져오기\n",
-        " \n",
+        "df = pd.read_csv('/content/drive/myDrive/수업/pandas/data/지역별주간별_초미세먼지.csv', engine='python', encoding='cp949')\n",
         "df"
       ],
       "execution_count": null,
@@ -631,7 +635,7 @@
       },
       "source": [
         "#데이터프레임의 정보\n",
-        " "
+        "df.info()"
       ],
       "execution_count": null,
       "outputs": [
@@ -665,12 +669,12 @@
       },
       "source": [
         "#데이터프레임의 크기 확인\n",
-        "print('데이터프레임 (행, 열) : ',  )\n",
-        "print('데이터프레임 행 개수 len : ',   )\n",
-        "print('데이터프레임 행 개수 len : ',   )\n",
-        "print('데이터프레임 행 개수 shape : ',  )\n",
-        "print('데이터프레임 열 개수 len : ',   )\n",
-        "print('데이터프레임 열 개수 shape : ',   )"
+        "print('데이터프레임 (행, 열) : ',  df.shape)\n",
+        "print('데이터프레임 행 개수 len : ', len(df))\n",
+        "print('데이터프레임 행 개수 len : ', len(df.index))\n",
+        "print('데이터프레임 행 개수 shape : ', df.shape[0])\n",
+        "print('데이터프레임 열 개수 len : ', len(df.columns))\n",
+        "print('데이터프레임 열 개수 shape : ', df.shape[1])"
       ],
       "execution_count": null,
       "outputs": [
@@ -699,9 +703,9 @@
       },
       "source": [
         "#데이터프레임 각 열의개수 확인\n",
-        "print( )\n",
+        "print(df.count())\n",
         "print('-'*20)\n",
-        "print( )"
+        "print(df.count(axis=1))"
       ],
       "execution_count": null,
       "outputs": [
@@ -748,7 +752,7 @@
       },
       "source": [
         "#데이터프레임의 원소의 총개수\n",
-        "print( )"
+        "print(df.size)"
       ],
       "execution_count": null,
       "outputs": [
@@ -772,8 +776,8 @@
       },
       "source": [
         "#데이터프레임의 인덱스\n",
-        "print('열인덱스 : ',  )\n",
-        "print('행인덱스 :',  )"
+        "print('열인덱스 : ', df.columns)\n",
+        "print('행인덱스 :', df.index)"
       ],
       "execution_count": null,
       "outputs": [
@@ -799,7 +803,7 @@
       "source": [
         "#각 문자열 요소에서 공백 제거\n",
         "lt = ['지역 ', '주간평균 ', '최고값 ', '최저값 ']\n",
-        "lt = \n",
+        "lt = [item.strip() for item in lt]\n",
         "lt"
       ],
       "execution_count": null,
@@ -874,7 +878,7 @@
       },
       "source": [
         "#열명의 공백 제거 \n",
-        " "
+        "df.columns  [item.strip() for item in df.columns]"
       ],
       "execution_count": null,
       "outputs": [
@@ -949,7 +953,7 @@
       },
       "source": [
         "#지역 컬럼을 행 인덱스로 지정\n",
-        " \n",
+        "df = df.set_index('지역')\n",
         "df"
       ],
       "execution_count": null,
@@ -1165,7 +1169,7 @@
       },
       "source": [
         "#인덱스를 일반 데이터 열로 전환\n",
-        " \n",
+        "df = df.reset_index()\n",
         "df"
       ],
       "execution_count": null,
@@ -1482,7 +1486,7 @@
       },
       "source": [
         "#특정 열(주간평균) 가져오기\n",
-        " "
+        "df['주간평균']"
       ],
       "execution_count": null,
       "outputs": [
@@ -1530,7 +1534,7 @@
       },
       "source": [
         "##특정 열(주간평균, 최저값) 가져오기\n",
-        " "
+        "df[['주간평균', '최저값']]"
       ],
       "execution_count": null,
       "outputs": [
@@ -1696,7 +1700,7 @@
       },
       "source": [
         "#특정행(부산에서 인천까지) 가져오기\n",
-        " "
+        "df['부산':'인천']"
       ],
       "execution_count": null,
       "outputs": [
@@ -1839,7 +1843,8 @@
         "outputId": "4106064c-6eb1-4f85-edf8-128a306656e5"
       },
       "source": [
-        "#loc 메소드로 특정 열(최저값) 가져오기\n"
+        "#loc 메소드로 특정 열(최저값) 가져오기\n",
+        "df.loc[:, '최저값']"
       ],
       "execution_count": null,
       "outputs": [
@@ -2181,7 +2186,7 @@
       },
       "source": [
         "#loc 메소드로 특정 열(주간평균, 최저값) 가져오기\n",
-        " "
+        "df.loc[:, ['주간평균', '최저값']]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2347,7 +2352,7 @@
       },
       "source": [
         "#loc 메소드로 특정 열(주간평균에서 최저값까지) 가져오기\n",
-        " "
+        "df.ldc[:, ['주간평균':'최저값']]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2532,7 +2537,7 @@
       },
       "source": [
         "#특정 행(부산) 가져오기\n",
-        " "
+        "df.loc[['부산'],:]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2604,7 +2609,8 @@
         "outputId": "d522b1af-d48d-4543-efd2-9dec6390410d"
       },
       "source": [
-        "#특정 행(부산, 인천) 가져오기"
+        "#특정 행(부산, 인천) 가져오기\n",
+        "df.loc[['부산', '인천'], :]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2683,7 +2689,8 @@
         "outputId": "21590cb8-ad5c-46a8-94d0-55c4c68e8911"
       },
       "source": [
-        "#특정 행(부산에서 인천까지) 가져오기"
+        "#특정 행(부산에서 인천까지) 가져오기\n",
+        "df.loc[['부산':'인천'], :]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2769,7 +2776,7 @@
       },
       "source": [
         "#특정 항목(부산의 주간평균) 가져오기\n",
-        " "
+        "df.loc['부산', '주간평균']"
       ],
       "execution_count": null,
       "outputs": [
@@ -2799,7 +2806,7 @@
       },
       "source": [
         "#특정 항목(부산과 인천의 주간평균과 최저값) 가져오기\n",
-        " "
+        " df.loc[['부산', '인천', ['주간평균', '최저값']]]"
       ],
       "execution_count": null,
       "outputs": [
@@ -2874,7 +2881,8 @@
         "outputId": "8f60db26-e5ec-4c8d-8f6a-84131b7d5b31"
       },
       "source": [
-        "#특정 항목(부산에서 인천까지의 주간평균에서 최저값까지) 가져오기"
+        "#특정 항목(부산에서 인천까지의 주간평균에서 최저값까지) 가져오기\n",
+        "df.loc['부산':'인천', '주간평균':'최저값']"
       ],
       "execution_count": null,
       "outputs": [
@@ -2973,7 +2981,8 @@
       "source": [
         "#특정 열 가져오기\n",
         "#df.loc[:, '최저값'] \n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[:, 2]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3021,7 +3030,8 @@
       },
       "source": [
         "#df.loc[:, ['주간평균', '최저값']]\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[:, [0, 2]]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3187,7 +3197,8 @@
       },
       "source": [
         "#df.loc[:, '주간평균':'최저값']\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[:, 0:2]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3353,7 +3364,8 @@
       "source": [
         "#특정 행 가져오기\n",
         "#df.loc['부산',:]\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[1, :]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3386,7 +3398,8 @@
       },
       "source": [
         "#df.loc[['부산', '인천'], :]\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[[1, 3], :]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3466,7 +3479,8 @@
       },
       "source": [
         "#df.loc['부산':'인천', :]\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[1:4, :]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3553,7 +3567,8 @@
       "source": [
         "#특정 항목 가져오기\n",
         "#df.loc['부산', '주간평균']\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.ilocp[1, 0]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3583,7 +3598,8 @@
       },
       "source": [
         "#df.loc[['부산','인천'],['주간평균', '최저값']]\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[[0, 3], [0, 2]]"
       ],
       "execution_count": null,
       "outputs": [
@@ -3659,7 +3675,8 @@
       },
       "source": [
         "#df.loc['부산':'인천','주간평균':'최저값']\n",
-        "#iloc로 변경"
+        "#iloc로 변경\n",
+        "df.iloc[1:4, 0:3]"
       ],
       "execution_count": null,
       "outputs": [
@@ -4230,7 +4247,8 @@
         "outputId": "02f49db7-52b4-44b9-dbe4-91d352825e49"
       },
       "source": [
-        "#행과 열 바꾸기"
+        "#행과 열 바꾸기\n",
+        "df.T"
       ],
       "execution_count": null,
       "outputs": [
@@ -4361,7 +4379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GOBRXRIYgaA9",
-        "outputId": "0ec7b463-bd01-4f2e-ea68-97362fce533a"
+        "outputId": "d4c46832-2762-4f52-c9f4-7541995536a3"
       },
       "source": [
         "#한글 폰트 사용설치\n",
@@ -4369,16 +4387,13 @@
         "\n",
         "!apt -qq -y install fonts-nanum"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "fonts-nanum is already the newest version (20170925-1).\n",
-            "The following package was automatically installed and is no longer required:\n",
-            "  libnvidia-common-460\n",
-            "Use 'apt autoremove' to remove it.\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 34 not upgraded.\n"
+            "0 upgraded, 0 newly installed, 0 to remove and 39 not upgraded.\n"
           ],
           "name": "stdout"
         }
@@ -4392,7 +4407,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -4428,6 +4443,7 @@
       },
       "source": [
         "#주간별 지역별주간별_초미세먼지.csv 데이터 가져오기\n",
+        "df = pd.read_csv('/content/drive/myDrive/수업/pandas/data/지역별주간별_초미세먼지.csv', engine='python', encoding='cp949')\n",
         "df"
       ],
       "execution_count": null,
@@ -4619,7 +4635,7 @@
       },
       "source": [
         "#지역으로 인덱스 변경\n",
-        " "
+        "df = df.set_index('지역')"
       ],
       "execution_count": null,
       "outputs": []
@@ -4735,7 +4751,9 @@
         "outputId": "3e2f6ae9-5975-479c-f8a8-bdf47784f73a"
       },
       "source": [
-        "#데이터 프레임 그래프 그리기"
+        "#데이터 프레임 그래프 그리기\n",
+        "df.plot(flgsize = (10,7))\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": [
